# Python-Cpp-send-image-to-dlib-as-array

./: README.md  dlib_image_from_array.h
OpenCV_example/: CMakeLists.txt  example  example.cpp
Python_example/: CMakeLists.txt  dlib_face.cpp  python_wrapper.py
